--- a/Invoke-LLM/package.json
+++ b/Invoke-LLM/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@tailwindcss/cli": "^4.1.18",
     "@tavily/core": "^0.7.1",
-    "groq-sdk": "^0.37.0"
+    "groq-sdk": "^0.37.0",
+    "tailwindcss": "^4.1.18"
   }
 }
