Add Express.js server with basic routes and dependencies
- Created server.js to set up a simple Express server with a welcome route and a chat endpoint.

--- a/Invoke-LLM/package.json
+++ b/Invoke-LLM/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.18",
     "@tavily/core": "^0.7.1",
+    "express": "^5.2.1",
     "groq-sdk": "^0.37.0",
     "tailwindcss": "^4.1.18"
   }
