--- a/Invoke-LLM/package.json
+++ b/Invoke-LLM/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.18",
     "@tavily/core": "^0.7.1",
+    "cors": "^2.8.6",
     "express": "^5.2.1",
     "groq-sdk": "^0.37.0",
     "tailwindcss": "^4.1.18"
